--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
+	implementation 'org.projectlombok:lombok:1.18.28'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-	developmentOnly 'org.springframework.boot:srping-boot-devtools'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
